styleClass fixed when collapsed
git-svn-id: http://anonsvn.icesoft.org/repo/icefaces/trunk@14187 8668f098-c06c-11db-ba21-f49e70c34f74

--- a/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
+++ b/icefaces/core/src/com/icesoft/faces/resources/css/royale/royale.css
@@ -2195,26 +2195,24 @@ Disabeld classes for the calendar controls
 */
 
 /* opened accordion styles */
-.icePnlAccrdHdr, .icePnlAccrdCnt, .icePnlAccrdCont {
+.icePnlAccrd, .icePnlAccrdHdr, .icePnlAccrdCnt {
 }
 
 /* Closed */
-.icePnlAccrdHdrColpsd, .icePnlAccrdCntColpsd,
-    .icePnlAccrdContColpsd {
+.icePnlAccrdColpsd, .icePnlAccrdColpsdHdr, .icePnlAccrdColpsdCnt {
 }
 
 /* Open and disabled */
-.icePnlAccrdHdr-dis, .icePnlAccrdCnt-dis, .icePnlAccrdCont-dis {
+.icePnlAccrd-dis, .icePnlAccrdHdr-dis, .icePnlAccrdCnt-dis {
 }
 
 /* Closed and disabled */
-.icePnlAccrdHdrColpsd-dis, .icePnlAccrdCntColpsd-dis,
-    .icePnlAccrdContColpsd-dis {
+.icePnlAccrdColpsd-dis, .icePnlAccrdColpsdHdr-dis, .icePnlAccrdColpsdCnt-dis{
 }
 
 /* common accordion headers */
-.icePnlAccrdHdr, .icePnlAccrdHdr-dis, .icePnlAccrdHdrColpsd,
-    .icePnlAccrdHdrColpsd-dis {
+.icePnlAccrdHdr, .icePnlAccrdHdr-dis, .icePnlAccrdColpsdHdr,
+    .icePnlAccrdColpsdHdr-dis {
     background-color: #EFEFEF;
     background-image: url( "./css-images/table_col_header.gif" );
     background-position: bottom;
@@ -2229,12 +2227,12 @@ Disabeld classes for the calendar controls
     padding-top: 4px;
     padding-bottom: 4px;
 }
-.icePnlAccrdHdr-dis, .icePnlAccrdHdrColpsd-dis{
+.icePnlAccrdHdr-dis, .icePnlAccrdColpsdHdr-dis{
     color: #999999;
 }
 
-.icePnlAccrdCnt, .icePnlAccrdCntColpsd,
-    .icePnlAccrdCntColpsd-dis, .icePnlAccrdCnt-dis {
+.icePnlAccrdCnt, .icePnlAccrdColpsdCnt,
+    .icePnlAccrdColpsdCnt-dis, .icePnlAccrdCnt-dis {
     background-color: #EFEFEF;
     border: 1px solid #CCCCCC;
     border-top: none;
